--- a/ui/src/app/layout/header/header.component.html
+++ b/ui/src/app/layout/header/header.component.html
@@ -1,7 +1,10 @@
 <div class="header container-fluid">
     <div class="container">
     <div class="row">
-        <div class="col-lg-2 col-sm-12">LOGO</div>
+        <div class="logo col-lg-2 col-sm-12">
+            <img src="../../../assets/images/logo.png" alt="logo">
+           OOO &laquo;МЕД-КОР&raquo;
+        </div>
         <div class="col-lg-2 col-sm-12">
             <button mat-mini-fab (click)="useLanguage('ru')">RU</button>
             <button mat-mini-fab (click)="useLanguage('ua')">UA</button>
