--- a/ui/src/app/layout/footer/footer.component.html
+++ b/ui/src/app/layout/footer/footer.component.html
@@ -5,8 +5,12 @@
             <ul class="col-lg-12 col-sm-12">
                 <li *ngFor="let link of links" [routerLink]="link.path">{{link.name}}</li>
             </ul>
-            <div class="col-lg-12 col-sm-12">
-                Наши контакты
+            <div class="contacts col-lg-12 col-sm-12">
+                ООО &laquo;МЕД-КОР&raquo;
+                <a href="tel:+380487700448">+380487700448</a>
+                <a href="tel:+380949954448">+380949954448</a>
+                <a href="tel:+380689380492">+380689380492</a>
+                г.Одесса, б-р Французский, дом 22, корпус 3.
             </div>
         </div>
     </div>
