started to create login form

--- a/ui/src/app/layout/header/header.component.html
+++ b/ui/src/app/layout/header/header.component.html
@@ -8,9 +8,12 @@
                 <button mat-mini-fab (click)="useLanguage('ru')">RU</button>
                 <button mat-mini-fab (click)="useLanguage('ua')">UA</button>
             </div>
-            <ul class="col-lg-8 col-sm-12">
+            <ul class="col-lg-5 col-sm-12">
                 <li *ngFor="let link of links" [routerLink]="link.path"><a>{{link.name}}</a></li>
             </ul>
+            <div class="col-lg-3">
+                <button mat-flat-button (click)="openRegistrationForm()">Регистрация</button>
+            </div>
         </div>
     </div>
 </div>
