--- a/ui/src/assets/styles/utils/_variables.scss
+++ b/ui/src/assets/styles/utils/_variables.scss
@@ -1,8 +1,8 @@
 $primary: #3e64ff;
 $second: #5edfff;
-$third:#5edfff;
 $light: #ecfcff;
 $red: #CC0000;
 $white: #fff;
 $form-color: #4a9aff;
 $black: #000;
+$text-input: #7438FF;
