--- a/ui/src/app/main-page/main-page.component.scss
+++ b/ui/src/app/main-page/main-page.component.scss
@@ -7,3 +7,12 @@ h1{
     text-align: center;
     margin-bottom: 100px;
 }
+
+.benefits {
+    height: 300px;
+    margin-top: 50px;
+    text-align: center;
+    font-size: 20px;
+    font-weight: bold;
+    color: $text-input;
+}
