--- a/ui/src/app/shared/components/contact-us-form/contact-us-form.component.html
+++ b/ui/src/app/shared/components/contact-us-form/contact-us-form.component.html
@@ -27,10 +27,10 @@
                     {{'ERROR_MSG.REQUIRED'| translate}}
                 </mat-error>
                 <mat-error *ngIf="contactUsForm.controls.lastName.errors.minlength">
-                    {{'ERROR_MSG.MINLENGTH'| translate}}
+                    {{'ERROR_MSG.MIN_LENGTH'| translate}}
                 </mat-error>
                 <mat-error *ngIf="contactUsForm.controls.lastName.errors.maxlength">
-                    {{'ERROR_MSG.MAXLENGTH'| translate}}
+                    {{'ERROR_MSG.MAX_LENGTH'| translate}}
                 </mat-error>
             </mat-error>
         </mat-form-field>
@@ -44,10 +44,10 @@
                     {{'ERROR_MSG.REQUIRED'| translate}}
                 </mat-error>
                 <mat-error *ngIf="contactUsForm.controls.email.errors.minlength">
-                    {{'ERROR_MSG.MINLENGTH'| translate}}
+                    {{'ERROR_MSG.MIN_LENGTH'| translate}}
                 </mat-error>
                 <mat-error *ngIf="contactUsForm.controls.email.errors.maxlength">
-                    {{'ERROR_MSG.MAXLENGTH'| translate}}
+                    {{'ERROR_MSG.MAX_LENGTH'| translate}}
                 </mat-error>
                 <mat-error *ngIf="contactUsForm.controls.email.errors.email">
                     {{'ERROR_MSG.EMAIL'| translate}}
@@ -64,10 +64,10 @@
                     {{'ERROR_MSG.REQUIRED'| translate}}
                 </mat-error>
                 <mat-error *ngIf="contactUsForm.controls.question.errors.minlength">
-                    {{'ERROR_MSG.MINLENGTH'| translate}}
+                    {{'ERROR_MSG.MIN_LENGTH'| translate}}
                 </mat-error>
                 <mat-error *ngIf="contactUsForm.controls.question.errors.maxlength">
-                    {{'ERROR_MSG.MAXLENGTH'| translate}}
+                    {{'ERROR_MSG.MAX_LENGTH'| translate}}
                 </mat-error>
             </mat-error>
         </mat-form-field>
