--- a/ui/src/app/main-page/main-page.component.html
+++ b/ui/src/app/main-page/main-page.component.html
@@ -1,16 +1,18 @@
-<div class="container-fluid">
+<div class="container-fluid ">
     <h1>{{'HOME.TITLE' | translate}}</h1>
+    <div class="row benefits">
+        <div class="col-lg-4">{{'WE.FIRST' | translate}}</div>
+        <div class="col-lg-4">{{'WE.SECOND' | translate}}</div>
+        <div class="col-lg-4">{{'WE.THIRD' | translate}}</div>
+    </div>
+    <div class="container">
     <div class="row">
         <iframe class="col-lg-7 col-sm-12 col-md-12"
                 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2748.6178692425883!2d30.756677451382068!3d46.45626817461603!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40c633dfdeca1c73%3A0x2455830502763fa8!2sFrantsuz&#39;ky%20Blvd%2C%2022%2C%20Odesa%2C%20Odes&#39;ka%20oblast%2C%2065000!5e0!3m2!1sen!2sua!4v1576233237107!5m2!1sen!2sua"
                 width="600" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
-        <div class="col-lg-5 col-sm-12 col-md-12">
+        <div class="col-lg-4 col-sm-12 col-md-12 ">
             <app-contact-us-form></app-contact-us-form>
         </div>
     </div>
-    <div class="row benefits">
-        <div class="col-lg-4"></div>
-        <div class="col-lg-4"></div>
-        <div class="col-lg-4"></div>
     </div>
 </div>
