added icons to maim page

--- a/ui/src/app/main-page/main-page.component.html
+++ b/ui/src/app/main-page/main-page.component.html
@@ -1,9 +1,18 @@
-<div class="container-fluid ">
+<div class="container-fluid">
     <h1>{{'HOME.TITLE' | translate}}</h1>
     <div class="row benefits">
-        <div class="col-lg-4">{{'WE.FIRST' | translate}}</div>
-        <div class="col-lg-4">{{'WE.SECOND' | translate}}</div>
-        <div class="col-lg-4">{{'WE.THIRD' | translate}}</div>
+        <div class="col-lg-4">
+            <p>{{'WE.FIRST' | translate}}</p>
+            <img src="../../assets/images/heart.png" alt="heart">
+        </div>
+        <div class="col-lg-4">
+            <p>{{'WE.SECOND' | translate}}</p>
+            <img src="../../assets/images/people.png" alt="people">
+        </div>
+        <div class="col-lg-4">
+            <p>{{'WE.THIRD' | translate}}</p>
+            <img src="../../assets/images/case.png" alt="case">
+        </div>
     </div>
     <div class="container">
     <div class="row">
