--- a/ui/src/assets/styles/utils/_variables.scss
+++ b/ui/src/assets/styles/utils/_variables.scss
@@ -1,4 +1,4 @@
-$primary: #3e64ff;
+$primary: linear-gradient(to right top, #6b9aff, #00b2ff, #00c5ff, #00d4ef, #0fe1d8);;
 $second: #5edfff;
 $light: #ecfcff;
 $red: #CC0000;
@@ -7,3 +7,5 @@ $form-color: #4a9aff;
 $black: #000;
 $text-input: #7438FF;
 $error:  #cc4321;
+$gray: lightgray;
+$border:#4a9aff;
