--- a/ui/src/app/app.component.html
+++ b/ui/src/app/app.component.html
@@ -1,6 +1,5 @@
-<div [ngClass]="backgroundImg">
 <app-header></app-header>
 <router-outlet></router-outlet>
 <app-footer></app-footer>
 <app-message *ngIf="show"></app-message>
-</div>
+<app-phone (click)="toggleFormForCall()" [isOpen]="isOpen"></app-phone>
