--- a/ui/src/app/layout/header/header.component.html
+++ b/ui/src/app/layout/header/header.component.html
@@ -1,16 +1,28 @@
-<div class="header container-fluid">
-    <div class="container">
-        <div class="row">
-            <div class="logo col-lg-2 col-sm-12">
-                <a routerLink="">OOO &laquo;МЕД-КОР&raquo;</a>
+<div class="header container-fluid p-0">
+    <div class="container-fluid upper-header">
+        <div class="container">
+            {{'CONTACTS.PHONES' | translate}} :
+            <a href="tel:+380487700448">+380487700448</a>
+            <a href="tel:+380949954448">+380949954448</a>
+            <a href="tel:+380689380492">+380689380492</a>
+        </div>
+    </div>
+    <div class="container-fluid nav-header">
+        <div class="container">
+            <div class="row">
+                <div class="logo col-lg-2 col-sm-12">
+                    <a routerLink="">
+                        <img src="../../../assets/images/logo.png" alt="logo">
+                    </a>
+                </div>
+                <div class="col-lg-2 col-sm-12">
+                    <button mat-mini-fab (click)="useLanguage('ru')">RU</button>
+                    <button mat-mini-fab (click)="useLanguage('ua')">UA</button>
+                </div>
+                <ul class="col-lg-5 col-sm-12">
+                    <li *ngFor="let link of links" [routerLink]="link.path"><a>{{'LINKS'+ link.name | translate}}</a></li>
+                </ul>
             </div>
-            <div class="col-lg-2 col-sm-12">
-                <button mat-mini-fab (click)="useLanguage('ru')">RU</button>
-                <button mat-mini-fab (click)="useLanguage('ua')">UA</button>
-            </div>
-            <ul class="col-lg-5 col-sm-12">
-                <li *ngFor="let link of links" [routerLink]="link.path"><a>{{link.name}}</a></li>
-            </ul>
         </div>
     </div>
 </div>
