--- a/ui/src/app/main-page/main-page.component.scss
+++ b/ui/src/app/main-page/main-page.component.scss
@@ -1,22 +1,34 @@
 @import "~assets/styles/utils/_variables";
 
-h1{
-    color:$white;
+h1 {
+    color: $white;
     font-size: 25px;
     font-weight: bold;
     text-align: center;
     margin-bottom: 100px;
+    padding-top: 30px;
+}
+
+.home-img {
+   width: 100vw;
+    display: block;
 }
 
 .benefits {
-    height: 300px;
+    padding-bottom: 30px;
     display: flex;
     text-align: center;
     font-size: 25px;
     font-weight: bold;
     color: $black;
     margin-bottom: 100px;
-    div{
-        align-self: flex-end;
-    }
+}
+
+.under-img-block {
+ background-image: $primary;
+}
+
+.contact-block {
+    background: $gray;
+    padding: 30px;
 }
