--- a/ui/src/app/shared/components/contact-us-form/contact-us-form.component.html
+++ b/ui/src/app/shared/components/contact-us-form/contact-us-form.component.html
@@ -1,4 +1,5 @@
 <div class="form-wrapper">
+    <div *ngIf="callForm" (click)="closedForm($event)"><img src="../../../../assets/images/icons/cross.png" alt="cross"></div>
     <form class="contact-us-form" [formGroup]="contactUsForm" (ngSubmit)="onSubmit()">
         <mat-form-field>
             <label>
@@ -10,14 +11,14 @@
                     {{'ERROR_MSG.REQUIRED'| translate}}
                 </mat-error>
                 <mat-error *ngIf="contactUsForm.controls.firstName.errors.minlength">
-                    {{minlength}}
+                    {{'ERROR_MSG.MIN_LENGTH'| translate}}
                 </mat-error>
                 <mat-error *ngIf="contactUsForm.controls.firstName.errors.maxlength">
-                    {{maxlength}}
+                    {{'ERROR_MSG.MAX_LENGTH'| translate}}
                 </mat-error>
             </mat-error>
         </mat-form-field>
-        <mat-form-field>
+        <mat-form-field *ngIf="!callForm">
             <label>
                 <input matInput placeholder="{{'FORM.LAST' | translate}}" formControlName="lastName">
             </label>
@@ -34,7 +35,7 @@
                 </mat-error>
             </mat-error>
         </mat-form-field>
-        <mat-form-field>
+        <mat-form-field *ngIf="!callForm">
             <label>
                 <input matInput placeholder="{{'FORM.EMAIL' | translate}}" formControlName="email">
             </label>
@@ -54,7 +55,24 @@
                 </mat-error>
             </mat-error>
         </mat-form-field>
-        <mat-form-field>
+        <mat-form-field *ngIf="callForm">
+            <label>
+                <input matInput placeholder="{{'FORM.PHONE' | translate}}" formControlName="phone">
+            </label>
+            <mat-error
+                *ngIf="contactUsForm.controls.phone.invalid && (contactUsForm.controls.phone.touched || contactUsForm.controls.phone.dirty)">
+                <mat-error *ngIf="contactUsForm.controls.phone.errors.required">
+                    {{'ERROR_MSG.REQUIRED'| translate}}
+                </mat-error>
+                <mat-error *ngIf="contactUsForm.controls.phone.errors.minlength">
+                    {{'ERROR_MSG.MIN_LENGTH'| translate}}
+                </mat-error>
+                <mat-error *ngIf="contactUsForm.controls.phone.errors.maxlength">
+                    {{'ERROR_MSG.MAX_LENGTH'| translate}}
+                </mat-error>
+            </mat-error>
+        </mat-form-field>
+        <mat-form-field *ngIf="!callForm">
             <label>
                 <textarea matInput placeholder="{{'FORM.QUESTION' | translate}}" formControlName="question"></textarea>
             </label>
