created additional routes

--- a/ui/src/app/app.component.html
+++ b/ui/src/app/app.component.html
@@ -3,3 +3,4 @@
 <app-footer></app-footer>
 <app-message *ngIf="show"></app-message>
 <app-phone (click)="toggleFormForCall()" [isOpen]="isOpen"></app-phone>
+<app-arrow (click)="goToTop()"></app-arrow>
