--- a/ui/src/app/layout/footer/footer.component.scss
+++ b/ui/src/app/layout/footer/footer.component.scss
@@ -8,6 +8,15 @@
 
 ul {
     color: $primary;
+    display: flex;
+    justify-content: center;
+
+    li {
+        color: $gray;
+        font-weight: bold;
+        margin-right: 10px;
+        margin-bottom: 10px;
+    }
 
     li:hover {
         cursor: pointer;
@@ -19,13 +28,28 @@ ul {
     flex-direction: column;
     color: $gray;
 
+    .social {
+        display: flex;
+        justify-content: center;
+    }
+
+    img {
+        height: 30px;
+        margin-right: 5px;
+    }
+
     a {
         color: $gray;
         text-decoration: none;
         margin-bottom: 10px;
         display: block;
     }
+
     div {
         margin-bottom: 10px;
     }
+}
+
+.active-link {
+    color: $error;
 }
