--- a/ui/src/app/main-page/main-page.component.html
+++ b/ui/src/app/main-page/main-page.component.html
@@ -2,7 +2,7 @@
     <img src="../../assets/images/home-page.png" alt="home-page" class="row home-img">
     <div class="row no-gutters under-img-block">
         <div class="container">
-            <h1 class="row">{{'HOME.TITLE' | translate}}</h1>
+            <h1 class="row title">{{'HOME.TITLE' | translate}}</h1>
             <div class="row benefits">
                 <div class="col-lg-4">
                     <p>{{'WE.FIRST' | translate}}</p>
