--- a/ui/src/app/layout/header/header.component.scss
+++ b/ui/src/app/layout/header/header.component.scss
@@ -25,6 +25,7 @@ ul {
     .container {
         padding: 5px 0;
         color: $gray;
+
         a {
             text-decoration: none;
             margin-right: 10px;
@@ -33,11 +34,76 @@ ul {
     }
 }
 
-.nav-header{
+.nav-header {
     background-image: $primary;
     padding: 5px 0;
 }
 
 button {
     margin-left: 5px;
+}
+
+.active-link {
+    color: $black;
+}
+
+.nav {
+    display: flex;
+    align-items: center;
+
+    li {
+        margin-right: 20px;
+    }
+}
+
+label {
+    margin: 0 40px 0 0;
+    font-size: 26px;
+    display: none;
+}
+
+#toggle {
+    display: none;
+}
+
+@media only screen and (max-width: 500px) {
+    .nav-header {
+        min-height: 170px;
+    }
+    .nav {
+        display: block;
+        text-align: right;
+    }
+    label {
+        display: block;
+        position: relative;
+        top: -70px;
+        right: -30px;
+        cursor: pointer;
+        &:focus{
+            outline: none;
+        }
+    }
+
+    button:first-of-type {
+        margin-top: 10px;
+    }
+
+    .menu {
+        text-align: center;
+        width: 100%;
+        display: none;
+    }
+
+    .menu li {
+        display: block;
+        margin-bottom: 10px;
+    }
+    #toggle:checked + .menu {
+        position: absolute;
+        right: -50px;
+        top: -40px;
+        z-index: 2;
+        display: block;
+    }
 }
