added carousel? fixed form for call

--- a/ui/src/app/main-page/main-page.component.scss
+++ b/ui/src/app/main-page/main-page.component.scss
@@ -32,3 +32,9 @@
     background: $gray;
     padding: 30px;
 }
+
+@media screen and (max-width: 500px){
+    iframe{
+        margin-bottom: 20px;
+    }
+}
