--- a/ui/src/app/shared/carousel/carousel.component.html
+++ b/ui/src/app/shared/carousel/carousel.component.html
@@ -1,3 +1,4 @@
+<div class="container-fluid">
 <input type="radio" id="trigger1" name="slider">
 <label for="trigger1"></label>
 <div class="slide bg1"></div>
@@ -17,3 +18,4 @@
 <input type="radio" id="trigger5" name="slider">
 <label for="trigger5"></label>
 <div class="slide bg5"></div>
+</div>
