--- a/ui/src/app/app.component.html
+++ b/ui/src/app/app.component.html
@@ -1,6 +1,6 @@
 <app-header></app-header>
+<app-message></app-message>
 <router-outlet></router-outlet>
 <app-footer></app-footer>
-<app-message *ngIf="show"></app-message>
-<app-phone (click)="toggleFormForCall()" [isOpen]="isOpen"></app-phone>
-<app-arrow (click)="goToTop()"></app-arrow>
+<app-phone (click)="toggleFormForCall($event)" [isOpen]="isOpen"></app-phone>
+<app-arrow (click)="goToTop()" *ngIf="isShowArrow"></app-arrow>
