fixed some bugs

--- a/ui/src/app/main-page/main-page.component.html
+++ b/ui/src/app/main-page/main-page.component.html
@@ -1,5 +1,7 @@
 <div class="container-fluid p-0">
-    <img src="../../assets/images/home-page.png" alt="home-page" class="row home-img no-gutters">
+    <div class="row no-gutters">
+        <img src="../../assets/images/home-page.png" alt="home-page" class="home-img">
+    </div>
     <div class="row no-gutters under-img-block">
         <div class="container">
             <h1 class="row title">{{'HOME.TITLE' | translate}}</h1>
