--- a/ui/src/app/layout/header/header.component.scss
+++ b/ui/src/app/layout/header/header.component.scss
@@ -99,13 +99,15 @@ label {
     .menu li {
         display: block;
         margin-bottom: 10px;
+        margin-right: 0;
     }
 
     #toggle:checked + .menu {
         position: absolute;
-        right: -50px;
+        right: 0;
         top: -40px;
-        z-index: 2;
+        z-index: 10;
         display: block;
+        text-align: center;
     }
 }
