--- a/ui/src/app/main-page/main-page.component.scss
+++ b/ui/src/app/main-page/main-page.component.scss
@@ -1,8 +1,7 @@
 @import "~assets/styles/utils/_variables";
 
 .home-img {
-    width: 100vw;
-    display: block;
+    width: 100%;
 }
 
 .benefits {
@@ -33,8 +32,14 @@
     padding: 30px;
 }
 
-@media screen and (max-width: 500px){
-    iframe{
+@media screen and (max-width: 500px) {
+    iframe {
         margin-bottom: 20px;
+    }
+    .benefits div {
+        margin-bottom: 40px;
+    }
+    .benefits {
+        margin-bottom: 0;
     }
 }
