--- a/ui/src/app/our-team-page/our-team-page.component.html
+++ b/ui/src/app/our-team-page/our-team-page.component.html
@@ -1,1 +1,5 @@
-<p>our-team-page works!</p>
+<div class="container">
+    <div class="row">
+        <div class="col-lg-"></div>
+    </div>
+</div>
