--- a/ui/src/app/shared/components/contact-us-form/contact-us-form.component.scss
+++ b/ui/src/app/shared/components/contact-us-form/contact-us-form.component.scss
@@ -31,7 +31,7 @@ mat-error {
 
 @media screen and (max-width: 500px) {
     .form-wrapper {
-        min-height: 450px;
+        max-height: 450px;
         padding: 10px;
         border-radius: 5px;
     }
