--- a/ui/src/app/main-page/main-page.component.scss
+++ b/ui/src/app/main-page/main-page.component.scss
@@ -32,6 +32,10 @@
     padding: 30px;
 }
 
+p {
+    font-size: 18px;
+}
+
 @media screen and (max-width: 500px) {
     iframe {
         margin-bottom: 20px;
